--- a/ngApp/src/app/register/register.component.html
+++ b/ngApp/src/app/register/register.component.html
@@ -1,1 +1,24 @@
-<p>register works!</p>
+<div class="row">
+  <div class="col-md-6 mx-auto">
+    <div class="card rounded-0">
+      <div class="card-header">
+        <h3 class="mb-0">Register</h3>
+      </div>
+      <div class="card-body">
+        <form class="form" (submit)="registerUser()">
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input [(ngModel)]="registerUserData.email" name="email" type="text" class="form-control rounded-0"
+              id="email" required>
+          </div>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input [(ngModel)]="registerUserData.password" name="password" type="password"
+              class="form-control rounded-0" id="password" required>
+          </div>
+          <button type="submit" class="btn btn-primary float-right">Register</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
